ActualizaciÃn de juego1

--- a/mundoClima/src/app/pildoras/juego1/juego1.component.html
+++ b/mundoClima/src/app/pildoras/juego1/juego1.component.html
@@ -10,3 +10,6 @@
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, repellat iste
   fuga officia alias labore pariatur voluptatibus doloribus cumque, hic ullam.
   Natus ut facere molestias blanditiis repellendus fuga perspiciatis corrupti?</p>
+
+
+  <p>Esto es un texto de exemplo</p>
